# hft-market-making-2026

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/: CODEOWNERS
cmake/: GenerateVersionFile.cmake  GlobalSettings.cmake  ThirdPartyLibs.cmake
config/: CMakeLists.txt
solution/: .gitignore  README.md  requirements.txt  run_backtest.py
solution/configs/: default.yaml
solution/data/MD/sample/: trades.csv
solution/notebooks/: report.ipynb
solution/src/: config.py  engine.py  lob.py  metrics.py  orders.py  reader.py  strategies.py
src/: Version.hpp.in
src/common/: BasicTypes.hpp  CMakeLists.txt  Dummy.cpp
src/main/: CMakeLists.txt  main.cpp
test/: BasicTypesTest.cpp  CMakeLists.txt  TempFile.hpp
